# bare-metal-space-invaders

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  kernel8.img
.github/workflows/: CI.yml
assets/: alien-1.data  alien-1.info  alien-scaled.data  alien.data  alien.info  crab.data  green.data  green.info  hero.data  hero.info  kernel8-chainboot.img  red.data  yellow.info
kernel/: Cargo.toml  README.md  build.rs
kernel/src/: allocator.rs  framebuffer.rs  gpio.rs  logger.rs  mailbox.rs  main.rs  print.rs  time.rs  uart.rs  uart_pl011.rs
kernel/src/boot/: boot.s  mod.rs
linker/: rpi_3b+.ld
space_invaders/: Cargo.toml
space_invaders/src/: GameContext.rs  actor.rs  game_context.rs  lib.rs  main.rs  platform.rs  time.rs
space_invaders/src/actor/: barricade.rs  enemy.rs  hero.rs  lives.rs  mod.rs  score_count.rs  shoot.rs
space_invaders/src/framebuffer/: color.rs  coordinates.rs  fb_trait.rs  mod.rs  raw_fb.rs  std_fb.rs
utils/: minipush.rb
utils/qemu/: Dockerfile  auto
