[package]
name = "bare-metal-spaceinvaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"]}
cortex-a = "~8.1"
space_invaders = { path = "../space_invaders", features= ["no_std"] }
bitflags = "2.3"
log = "0.4.19"

[profile.release]
lto = true
# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }
